completed pause, play and input functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input type="number" id="duration">
+    <input type="text" value="30" id="duration">
     <button id="start">▶</button>    
     <button id="pause">⏸</button>    
     <script src="index.js"></script>
