--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
              stroke-dashoffset="0"
              transform="rotate(-90 200 200)">
         </svg>
+        <div class="result"></div>
     </div>
-    <script src="timer.js"></script>    
-    <script src="index.js"></script>
+    <script type="module" src="timer.js"></script>    
+    <script type="module" src="index.js"></script>
 </body>
 </html>
