Added Validations and mm:ss functionality

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
     <div class="timer">
         <div class="controls">
-            <form action="#">
-                <input type="text" name="timerValues" value="00:00" pattern="((\d+){2})[:]([0-5][0-9])" title="Enter digit in format mm:ss" id="duration">
-                <button type="submit" hidden>Submit</button>
+            <form id = "myForm">
+                <input type="text" type="submit" name="timerValues" value="00:00" pattern="((\d+){2})[:]([0-5][0-9])" title="Enter digit in format mm:ss" id="duration" autofocus>
             </form>
             <div class="buttons-group">
                 <button id="start">▶</button>    
