Non modular version

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </svg>
         <div class="result"></div>
     </div>
-    <script type="module" src="timer.js"></script>    
-    <script type="module" src="index.js"></script>
+    <script type="text/javascript" src="timer.js"></script>    
+    <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
