Improved User Experience

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="timer">
         <div class="controls">
             <form id = "myForm">
-                <input type="text" type="submit" name="timerValues" value="00:00" pattern="((\d+){2})[:]([0-5][0-9]|60)" title="Enter digit in format mm:ss" id="duration" autofocus>
+                <input type="text"  name="timerValues" value="00:00" pattern="((\d+){2})[:]([0-5][0-9]|60)" title="Enter digit in format mm:ss" id="duration" autofocus>
             </form>
             <div class="buttons-group">
-                <button id="start">▶</button>    
+                <button id="start" >▶</button>    
                 <button id="pause">⏸</button>
             </div>
         </div>
