Added limitation on Minutes to accept total of 2 digits

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="timer">
         <div class="controls">
             <form id = "myForm">
-                <input type="text"  name="timerValues" value="00:00" pattern="((\d+){2})[:]([0-5][0-9]|60)" title="Enter digit in format mm:ss" id="duration" autofocus>
+                <input type="text"  name="timerValues" value="mm:ss" pattern="((\d){1,2})[:]([0-5][0-9]|60)" title="Enter time in format mm:ss" id="duration" autofocus>
             </form>
             <div class="buttons-group">
                 <button id="start" >▶</button>    
